--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,18 +2,18 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    buildToolsVersion "19.1.0"
 
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
-        testPackageName "com.maxtower.accelerometergauge.app.tests"
+        testApplicationId "com.maxtower.accelerometergauge.app.tests"
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
